--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,20 @@
 {
     "name": "colbycommunications/colby-libraries-theme",
-    "description": "Starter theme to build a Timber theme",
+    "description": "Colby Libraries theme",
     "type": "wordpress-theme",
-    "minimum-stability": "stable",
     "authors": [
         {
-            "email": "jared@upstatement.com",
-            "name": "jarednova"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://wpackagist.org"
+            "name": "Brandon Waltz",
+            "email": "brandon.waltz@colby.edu"
         }
     ],
     "require": {
-        "timber/timber": "1.*"
+        "php": ">=8.0"
     },
-    "require-dev": {
-        "phpunit/phpunit": "5.7.16|6.*"
+    "keywords": [
+        "wordpress"
+    ],
+    "config": {
+        "allow-plugins": true
     }
 }
